Updated Navbar for clearer flow of menu options and updating About page to fix content overflowing the viewport.

--- a/client/src/pages/about.css
+++ b/client/src/pages/about.css
@@ -1,6 +1,7 @@
 .about-container {
-    justify-content: center; /* Center items horizontally */
-    align-items: center; /* Center items vertically */
-    height: 100vh; /* Set the height of the container to fill the viewport */
-    text-align: center; /* Center text horizontally */
-  }
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
